-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.3
-
9567a34bc0d9be87d3b0d6cbcb841837ca1d5659 (qt/qtbase/dev)
When doing a block selection, and having the mouse cursor go out of the text area past end of file, the block selection start column is reset to 0.
Steps to reproduce:
- Start block selection with ALT+mouse
- Hold the selection and move mouse over the bottom scrollbar (out of text area) and move it around a little (the block selection should go all crazy at this point)
- Move mouse cursor back to the text area
- EXPECTED: Block selection is the same as it was before moving the cursor out of text area
- ACTUAL: Block selection start column is moved to 0
This issue is probably caused by something going wrong with the end of file marker when the mouse moves past it while doing block selection. The same situation does not reproduce if you move mouse to above of the text editor (where end of file marker is not hit), although the selection also goes crazy in this scenario while the mouse cursor is out of the text area.
For Gerrit Dashboard: QTBUG-64856 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
212893,3 | QPlainTextEdit: add current state of modifiers to auto scroll event | dev | qt/qtbase | Status: MERGED | +2 | 0 |