QPlainTextEdit: add current state of modifiers to auto scroll event

Fixes: QTBUG-64856
Change-Id: I8de851e75204bbeb7f3fbd40a5f2200028cc9337
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>